<resources>
    <string name="app_name">TicTactToe</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Добро пожаловать в игру Крестики-нолики</string>
    <string name="enter_name">Введите имя:</string>
    <string name="choose_mode">Выберите сторону:</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="start_game">Начать игру!</string>
    <string name="choose_level">Выберите сложность:</string>
    <string name="enter_name_warning">Пожалуйста, введите ваше имя</string>
    <string name="player_enter" formatted="false">Игрок %s присоединился к игре за %s</string>
    <string name="won_message">Игрок %s одержал победу в этой тяжелейшей партии</string>
    <string name="draw_message">Вам удалось свести партию к ничьей</string>

    <string-array name="levels">
        <item>новичок</item>
        <item>любитель</item>
        <item>профессионал</item>
        <item>мировой класс</item>
    </string-array>
</resources>
