<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.isavin.tictactoe.GreetingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/enter_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/enter_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"
        android:cursorVisible="false"
        android:elegantTextHeight="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/choose_mode_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/choose_mode"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/game_mode_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/x"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/choose_level_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="3"
        android:text="@string/choose_level"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/select_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:entries="@array/levels"
        android:gravity="fill_horizontal"
        android:textAlignment="gravity"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:onClick="onStartGameClicked"
        android:text="@string/start_game" />

</GridLayout>
